# resume-information-extractor

./: .coverage  .dockerignore  .editorconfig  .env.example  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .runner_system_id  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  PLAN.md  README.md  SECURITY.md  SPECIFICATION.md  TASKS.md  USER_MANUAL.md  cliff.toml  config.toml  coverage.xml  docker-compose.yml  package-lock.json  pyproject.toml  requirements-dev.txt  requirements.txt
.specify/: README.md
.specify/memory/: README.md  constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
backend/: .env  .gitignore  main.py  requirements.txt
backend/app/: __init__.py
backend/app/api/: upload.py
backend/app/models/: resume_model.py
backend/app/services/: ai_extractor.py  json_formatter.py  pdf_reader.py  text_cleaner.py
backend/static/: index.html
backend/static/assets/: index-4wCxsfX4.js  index-MJnTzD5J.css
frontend/src/: App.css  App.jsx  index.css
frontend/src/assets/: styles.css
frontend/src/components/: ErrorMessage.jsx  Footer.jsx  Loading.jsx  Navbar.jsx  ResumeDetails.jsx  SkillsCard.jsx  UploadResume.jsx
frontend/src/pages/: Home.jsx  Result.jsx
frontend/src/services/: api.js
specs/: resume_information_extractor.spec.md
specs/resume-information-extractor/: plan.md  spec.md  tasks.md
tests/: test_api_smoke.py  test_resume_processing.py  test_upload_route.py
