[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "resume-information-extractor"
version = "1.0.0"
description = "A FastAPI-based application that extracts structured candidate information from uploaded PDF resumes."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "AGPL-3.0-or-later" }
authors = [
  { name = "Vamshi Bojana" }
]
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "pymupdf>=1.24.0",
  "pdfminer.six>=20231228",
  "python-dotenv>=1.0.0",
  "pandas>=2.2.0",
  "numpy>=1.26.0",
  "regex>=2024.5.0",
  "pydantic>=2.7.0",
  "spacy>=3.7.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0",
  "bandit[toml]>=1.9.4",
  "vulture>=2.0.0",
  "pylint>=3.1.0",
  "flake8>=7.1.0",
  "pyupgrade>=3.20.0",
  "semgrep>=1.84.0",
  "pip-audit>=2.8.0",
  "pre-commit>=3.7.0"
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "N", "W"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.10"
files = ["backend"]
strict = false
warn_return_any = true
warn_unused_configs = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["fitz"]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["backend"]
testpaths = ["tests"]
addopts = "--cov=backend --cov-report=term-missing --cov-report=xml --cov-report=html"

[tool.coverage.run]
branch = true
source = ["backend"]

[tool.coverage.report]
show_missing = true
fail_under = 90

[tool.bandit]
exclude_dirs = ["tests", "frontend"]
skips = ["B101"]

[tool.vulture]
paths = ["backend"]
min_confidence = 80

[tool.pylint.messages_control]
disable = ["missing-module-docstring", "missing-function-docstring"]

[tool.flake8]
max-line-length = 100
exclude = [".venv", "venv", "frontend", "htmlcov"]

[tool.pyupgrade]
keep-runtime-typing = true
